--- a/index.html
+++ b/index.html
@@ -3,41 +3,50 @@
   <head>
     <!-- PAGE INFO -->
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Origin 6</title>
+    <title>Elcio Cabeleireiros</title>
+
     <!-- Styles -->
     <link rel="stylesheet" href="style.css" />
 
-    <!-- Fontes -->
-    <link rel="stylesheet" href="
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <header id="Header">
+    <header id="header">
       <nav class="container">
-        <a class="Logo" href="#">Elcio Cabeleireiros</a>
-        <div class="Menu">...</div>
+        <a class="logo" href="#">Elcio <span>Cabeleireiros</span></a>
+        <div class="menu">...</div>
       </nav>
     </header>
+
     <main>
-      <section>
-        <div class="container">
-          <img
-            src="https://images.unsplash.com/photo-1617690825204-069678e3a2d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-            alt="Imagem 1"
-          />
-          <h1>Progressiva orgânica para seus cabelos</h1>
-          <p>
-            Um salão com profissinais capacitados para melhor lhe satisfazer
-          </p>
-          <a class="Button" href="#">Agendar um horário</a>
+      <section class="section" id="home">
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1617690825204-069678e3a2d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+              alt="Imagem 1"
+            />
+          </div>
+          <div class="text">
+            <h1>Progressiva orgânica para seus cabelos</h1>
+            <p>
+              Um salão com profissinais capacitados para melhor lhe satisfazer
+            </p>
+            <a class="button" href="#">Agendar um horário</a>
+          </div>
         </div>
+      </section>
+
+      <div class="divider-1"></div>
+
+      <section class="section">
+        <div class="container">Outra section</div>
       </section>
     </main>
   </body>
