--- a/index.html
+++ b/index.html
@@ -18,9 +18,23 @@
   </head>
   <body>
     <header id="header">
-      <nav class="container">
+      <nav class="container show">
         <a class="logo" href="#">Elcio <span>Cabeleireiros</span></a>
-        <div class="menu">...</div>
+        <!-- MENU -->
+        <div class="menu">
+          <ul class="grid">
+            <li><a class="title" href="#home">Início</a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#testimonials">Depoimentos</a></li>
+            <li><a class="title" href="#contact">Contato</a></li>
+          </ul>
+        </div>
+        <!-- MENU -->
+        <div>
+          <div class="open">...</div>
+          <div class="close">x</div>
+        </div>
       </nav>
     </header>
 
@@ -34,7 +48,7 @@
             />
           </div>
           <div class="text">
-            <h1>Progressiva orgânica para seus cabelos</h1>
+            <h2 class="title">Progressiva orgânica para seus cabelos</h2>
             <p>
               Um salão com profissinais capacitados para melhor lhe satisfazer
             </p>
@@ -45,8 +59,11 @@
 
       <div class="divider-1"></div>
 
-      <section class="section">
-        <div class="container">Outra section</div>
+      <section class="section" id="about">
+        <div class="container grid">Sobre</div>
+      </section>
+      <section class="section" id="services">
+        <div class="container grid">Serviços</div>
       </section>
     </main>
   </body>
