--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elcio Cabeleireiros</title>
 
+    <!-- Icons -->
+    <link rel="stylesheet" href="Assets/style.css" />
+
     <!-- Styles -->
     <link rel="stylesheet" href="style.css" />
 
@@ -18,7 +21,7 @@
   </head>
   <body>
     <header id="header">
-      <nav class="container show">
+      <nav class="container">
         <a class="logo" href="#">Elcio <span>Cabeleireiros</span></a>
         <!-- MENU -->
         <div class="menu">
@@ -31,10 +34,8 @@
           </ul>
         </div>
         <!-- MENU -->
-        <div>
-          <div class="open">...</div>
-          <div class="close">x</div>
-        </div>
+          <div class="toggle icon-menu"></div>
+          <div class="toggle icon-close"></div>
       </nav>
     </header>
 
@@ -60,11 +61,69 @@
       <div class="divider-1"></div>
 
       <section class="section" id="about">
-        <div class="container grid">Sobre</div>
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+              alt="Imagem 2"
+            />
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre Nós</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+              nemo, amet aliquam facere praesentium ex natus iste minus numquam,
+              consequatur enim adipisci consequuntur fuga quae perferendis hic,
+              sunt porro debitis.
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+              iure similique libero possimus id totam optio assumenda, ad ut
+              ipsum atque voluptatum ducimus corporis architecto culpa. Enim
+              unde commodi ad?
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
+              repudiandae dolorum optio natus quis quos consectetur eum quaerat
+              voluptatem molestias, nostrum maiores accusantium error dolor
+              incidunt cupiditate praesentium voluptates. Dolorum?
+            </p>
+          </div>
+        </div>
       </section>
+        <div class="divider-2"></div>
       <section class="section" id="services">
-        <div class="container grid">Serviços</div>
+        <div class="container grid">
+<header>
+  <h2 class="title">Serviços</h2>
+  <p>Com mais de 30 anos no mercado, o <strong>Elcio Cabeleireiros</strong> já conquistou clientes de inúmeras regiões com seus tratamentos exclusivos e totalmente naturais
+  </p>
+  <header>
+  <div class="cards grid">
+    <div class="card">
+      <i class="icon-woman-hair"></i>
+      <h3 class="title">Terapia Capilar</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, quis. Aliquam, aut labore!
+      </p>
+    </div>
+    <div class="card">
+      <i class="icon-trim"></i>
+      <h3 class="title">Cortes</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, quis. Aliquam, aut labore!
+      </p>
+    </div>
+    <div class="card">
+      <i class="icon-cosmetic"></i>
+      <h3 class="title">Tratamentos</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, quis. Aliquam, aut labore!
+      </p>
+    </div>
+  </div>
+</div>
       </section>
     </main>
+    <script src="main.js"></script>
   </body>
 </html>
